@@ -1,3 +1,8 @@
+Thu Dec 23 12:11:22 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb (Resolv::IPv4::Regex): make it only accept 0 to 255.
+	  [ruby-core:29501]
+
 Tue Dec 21 00:58:21 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
 
 	* Backported the fix at
